[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/WAT/wat.gd" type="Script" id=1]
[ext_resource path="res://addons/WAT/view.gd" type="Script" id=2]
[ext_resource path="res://addons/WAT/icons/more_button.svg" type="Texture" id=3]
[ext_resource path="res://addons/WAT/results/ResultsForest.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/WAT/runner/timer.gd" type="Script" id=5]

[node name="WAT" type="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Options" type="HBoxContainer" parent="GUI"]
editor/display_folded = true
margin_right = 1010.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Run" type="MenuButton" parent="GUI/Options"]
margin_right = 36.0
margin_bottom = 22.0
text = "Run"
items = [ "Run All Tests", null, 0, false, false, 0, 0, null, "", false, "Run Selected Directory", null, 0, false, false, 1, 0, null, "", false, "Run Selected Script", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[node name="View" type="MenuButton" parent="GUI/Options"]
margin_left = 46.0
margin_right = 88.0
margin_bottom = 22.0
text = "View"
items = [ "Expand All Results", null, 0, false, false, 0, 0, null, "", false, "Collapse All Results", null, 0, false, false, 1, 0, null, "", false, "Expand All Failures", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[node name="VSeparator" type="VSeparator" parent="GUI/Options"]
margin_left = 98.0
margin_right = 102.0
margin_bottom = 22.0

[node name="DirLabel" type="Label" parent="GUI/Options"]
margin_left = 112.0
margin_top = 4.0
margin_right = 175.0
margin_bottom = 18.0
text = "Directory:"
align = 1

[node name="DirectorySelector" type="OptionButton" parent="GUI/Options"]
margin_left = 185.0
margin_right = 516.0
margin_bottom = 22.0
grow_horizontal = 0
grow_vertical = 0
hint_tooltip = "Select A Folder to run tests only from that folder."
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 20
button_mask = 3
text = "res://tests"
align = 1
items = [ "res://tests", null, false, 0, null, "res://tests/Bootstrapping", null, false, 1, null, "res://tests/Bootstrapping/End2End", null, false, 2, null, "res://tests/Bootstrapping/Integration", null, false, 3, null, "res://tests/Bootstrapping/Unit", null, false, 4, null ]
selected = 0

[node name="VSeparator2" type="VSeparator" parent="GUI/Options"]
margin_left = 526.0
margin_right = 530.0
margin_bottom = 22.0

[node name="ScriptLabel" type="Label" parent="GUI/Options"]
margin_left = 540.0
margin_top = 4.0
margin_right = 580.0
margin_bottom = 18.0
text = "Script:"
align = 1

[node name="ScriptSelector" type="OptionButton" parent="GUI/Options"]
margin_left = 590.0
margin_right = 921.0
margin_bottom = 22.0
hint_tooltip = "Select a single test script to run (your choices depend on which folder is selected)."
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1

[node name="VSeparator3" type="VSeparator" parent="GUI/Options"]
margin_left = 931.0
margin_right = 935.0
margin_bottom = 22.0

[node name="More" type="MenuButton" parent="GUI/Options"]
margin_left = 945.0
margin_right = 1009.0
margin_bottom = 22.0
text = "More"
icon = ExtResource( 3 )
items = [ "Add Script Templates", null, 0, false, false, 0, 0, null, "", false, "Print Stray Nodes", null, 0, false, false, 1, 0, null, "", false ]

[node name="Overwrite" type="ConfirmationDialog" parent="GUI/Options/More"]
margin_right = 200.0
margin_bottom = 70.0
popup_exclusive = true
window_title = "Templates Exist"
resizable = true
dialog_text = "Templates already exist. Do you want to overwrite them?"

[node name="Results" parent="GUI" instance=ExtResource( 4 )]
margin_bottom = 552.0

[node name="Info" type="HBoxContainer" parent="GUI"]
margin_top = 556.0
margin_right = 1010.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 50
alignment = 2

[node name="Timer" type="Label" parent="GUI/Info"]
margin_left = 708.0
margin_top = 8.0
margin_right = 786.0
margin_bottom = 22.0
text = "Not Running"
align = 2
script = ExtResource( 5 )

[node name="VSeparator" type="VSeparator" parent="GUI/Info"]
margin_left = 836.0
margin_right = 840.0
margin_bottom = 30.0

[node name="RunCount" type="Label" parent="GUI/Info"]
margin_left = 890.0
margin_top = 8.0
margin_right = 1010.0
margin_bottom = 22.0
text = "Ran Tests: 0 Times"
[connection signal="confirmed" from="GUI/Options/More/Overwrite" to="GUI/Options" method="copy_script_templates"]
